chore: fix layout shifting

--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   max-width: 100vw;
   position: sticky;
-  top: min(2.5rem, 7.5vw);
+  top: var(--navbar-min-height);
   background-color: #0f0f0f;
   z-index: 2;
   box-shadow: 0 0.8rem 1rem #0f0f0f;
